<resources>
    <!-- weekdays -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- months -->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="about">About</string>
    <string name="app_invite_call_to_action">Install SwingPlanner</string>
    <string name="app_invite_message">Try out this great app to find all swing dancing events worldwide!</string>
    <string name="app_invite_title">Check out SwingPlanner</string>
    <string name="attending">Attending</string>
    <string name="browse">Browse</string>
    <string name="change_language_not_implemented">Changing language is not yet implemented</string>
    <string name="changelog">Changelog</string>
    <string name="channel_custom">Notifications for your custom queries</string>
    <string name="channel_event">Event Notifications</string>
    <string name="channel_miscellaneous">Miscellaneous Notifications</string>
    <string name="channel_teacher">Teacher Notifications</string>
    <string name="contact_me">Contact me</string>
    <string name="contact_me_description">Send feedback, ideas or submit new events</string>
    <string name="deleted_message">Deleted \'%1$s\'</string>
    <string name="dialog_ok">OK</string>
    <string name="email_copied">Email copied</string>
    <string name="enable_animations">Enable animations</string>
    <string name="event_details">Event details</string>
    <string name="event_updated_message">%1$s has been updated with new information</string>
    <string name="event_updated_title">%1$s updated</string>
    <string name="failed_get_events">Oh no, we failed to complete your request!</string>
    <string name="failed_load_event_details">Failed to load event details</string>
    <string name="failed_retrieve_events">Failed to retrieve events</string>
    <string name="favorite_error_text">Oh no, something went wrong while we tried to retrieve your favorite events!</string>
    <string name="favorites">Favorites</string>
    <string name="filter_options_description">Only show events with…</string>
    <string name="filter_title">Filter</string>
    <string name="language">Language</string>
    <string name="manage_subscriptions">Manage subscriptions</string>
    <string name="no_events_found">No events found</string>
    <string name="no_favorites_found">You don\'t have any events added as favorites yet</string>
    <string name="notification_custom_query_title">Your subscription query \'%1$s\' found a new event</string>
    <string name="notification_event_body">Updated teacher list: %1$s</string>
    <string name="notification_event_title">%1$s has been updated with new teachers</string>
    <string name="notification_settings">Notification settings</string>
    <string name="notification_teacher_update_body">Attending %1$s</string>
    <string name="notification_teacher_update_title">%1$s registered for a new event</string>
    <string name="onboarding_message_1">All swing dancing events worldwide in one place</string>
    <string name="onboarding_message_2">Search and filter by type of dance, city, country, continent or event name</string>
    <string name="onboarding_message_3">Find which events your favorite teacher is attending</string>
    <string name="onboarding_message_4">Get notified instantly as more information is made available for your favorite events, or when your favorite teacher signs up for a new event</string>
    <string name="onboarding_title_1">Find your event</string>
    <string name="onboarding_title_2">Easy search &amp; filtering</string>
    <string name="onboarding_title_3">All teachers</string>
    <string name="onboarding_title_4">Instant updates</string>
    <string name="open_source">Open source</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://oskarh.github.io/SwingPlanner-android/</string>
    <string name="rate_app">Rate app</string>
    <string name="rate_app_message">If you enjoy using SwingPlanner, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_app_negative">No thanks</string>
    <string name="rate_app_never_ask">NEVER ASK</string>
    <string name="rate_app_positive">RATE NOW</string>
    <string name="rate_app_title">Have a minute?</string>
    <string name="search">Search</string>
    <string name="search_header_empty">Found no events matching \'%1$s\'</string>
    <string name="search_header_found">Found %1$d events</string>
    <string name="search_title">Search</string>
    <string name="settings">Settings</string>
    <string name="share_app">Share app</string>
    <string name="share_app_subtext">Help others discover the app</string>
    <string name="subscribe_query_hint">City, Country or free text</string>
    <string name="subscribe_query_title">Query to subscribe to</string>
    <string name="subscription_already_present">You already have a subscription for %1$s</string>
    <string name="subscription_validation_failed_message">Subscriptions must be at least %1$d characters</string>
    <string name="subscriptions_title">Subscribed notifications</string>
    <string name="swingplanner_updated">SwingPlanner Updated!</string>
    <string name="tap_target_add_subscription_message">Create a new subscription to get automatic notifications of new events</string>
    <string name="tap_target_add_subscription_title">Add subscription</string>
    <string name="tap_target_add_to_calendar_message">Add the event to your calendar so you don\'t forget about it</string>
    <string name="tap_target_add_to_calendar_title">Add to calendar</string>
    <string name="tap_target_event_website_message">Click here to go to the event\'s official website</string>
    <string name="tap_target_event_website_title">Event website</string>
    <string name="tap_target_like_event_message">Add an event as favorite to save it for later</string>
    <string name="tap_target_like_event_title">Like event</string>
    <string name="tap_target_like_teacher_message">Like your favorite teachers to automatically receive notifications when they sign up for new events</string>
    <string name="tap_target_like_teacher_title">Like teacher</string>
    <string name="tap_target_manage_subscriptions_message">Manage your event subscriptions here</string>
    <string name="tap_target_manage_subscriptions_title">Subscribe to events</string>
    <string name="tap_target_search_events_message">By city, country, continent or event name</string>
    <string name="tap_target_search_events_title">Search for events</string>
    <string name="tap_target_search_teachers_message">Search for your favorite teacher by name</string>
    <string name="tap_target_search_teachers_title">Find teachers</string>
    <string name="tap_target_teacher_youtube_message">See your favorite teacher\'s crazy moves on YouTube!</string>
    <string name="tap_target_teacher_youtube_title">Open YouTube</string>
    <string name="teachers">Teachers</string>
    <string name="theme">Theme</string>
    <string name="themes_not_implemented">Changing theme is not yet implemented</string>
    <string name="toggle_view_mode_title">Toggle list mode</string>
    <string name="try_again">Try again</string>
    <string name="undo_action">UNDO</string>
    <string name="version">Version</string>
    <string name="youtube_not_available">YouTube app required</string>
</resources>
